--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "floating-vue-monorepo",
-  "version": "1.0.0-beta.19",
+  "version": "1.0.1-dev.1",
   "private": true,
   "workspaces": [
     "packages/*"
